Enhancement to support IFileID.getURI(), and URI-based IFileIDs, rather than URL-based IDs only.  Also added methods to IFileTransferProtocolMapper to specify use of URI (or URL) and added optional attribute to allow URIs to be used (rather than URLs).  This addresses bug https://bugs.eclipse.org/bugs/show_bug.cgi?id=268440